refactor: 에피소드 도메인 수정 및 유스케이스 수정